style.css
:root {
    --tableColour: rgb(0, 200, 40);
    --tableDecorColour: hsl(60, 100%, 75%, 0.5);
    --titleColour: hsl(60, 100%, 75%, 0.75);
    --uiElementBorder: 5px solid var(--tableDecorColour);
    --successColour: chartreuse;
    --failureColour: red;
    --buttonWidth: 12rem;
    --buttonPadding: 0.25em;
    --outerPadding: 0.5rem;
    --interItemPadding: 0.5rem;
    --outlineOffset: 10px;
    --titleAspectRatio: 1310/403;
    --maxTitleWidth: 40rem;
    --playTopMargin: calc(-0.35 * (100% / (var(--titleAspectRatio))));
    --sidebarWidth: minmax(0, var(--buttonWidth));
}

* {
    -webkit-user-select: none;
    user-select: none;
}

html {
    padding: 0;
    justify-content: center;
    background: black;
}

html, body, #cribtrainer {
    width: 100%;
    height: 100%;
    margin: 0;
}

h1 {
    grid-area: title;
    margin: 0;
    place-self: stretch;
}

h1 a {
    display: block;
    aspect-ratio: var(--titleAspectRatio);
    color: transparent;
    background: var(--titleColour);
    mask-image: url("/img/cribtrainer-arched.svg");
    mask-size: contain;
    mask-repeat: no-repeat;
    mask-position: center;
}

a {
    text-decoration: none;
    color: inherit;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

a:active {
    -webkit-tap-highlight-color: transparent;
    outline: none;
}

#cribtrainer, [role=dialog], #scoreboard {
    touch-action: none;
}

[role=dialog] {
    display: none;
}

:is(:hover, :focus) {
    outline: none;
}

.stacked {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#cribtrainer {
    display: grid;
    grid-template-columns:
        var(--sidebarWidth)
        min(100%, var(--maxTitleWidth))
        var(--sidebarWidth);
    grid-template-rows: auto 1fr auto;
    grid-template-areas:
        "sidebar-left title sidebar-right"
        ". view ."
        ". nav .";
    gap: var(--interItemPadding);
    place-items: center;
    justify-content: center;

    background: fixed radial-gradient(circle at 50% 10rem, var(--tableColour) 0%, hsl(from var(--tableColour) h s calc(l * 0.75)) 40%, rgb(0,0,0) 100%);
    font-family: 'Public Sans', sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    padding: var(--outerPadding);
    box-sizing: border-box;
}

.view {
    display: contents;
}

.view nav {
    gap: 1rem;
    flex: 0;
    grid-area: nav;
}

#cards {
    --cardset-should-animate: 1;
    --cardset-card-background-image: url("/img/card-back.svg");
    grid-area: view;
    margin-top: var(--playTopMargin);
    margin-bottom: calc(2*var(--interItemPadding));
    align-self: stretch;
    max-width: calc(var(--maxTitleWidth) - 5rem);
    justify-self: center;
}

.view nav>* {
    text-align: center;
    font-size: 2em;
    font-family: inherit;
}

.view nav>*:not(score-select) {
    background-color: transparent;
    color: var(--tableDecorColour);
    width: var(--buttonWidth);
    padding: var(--buttonPadding);
    cursor: pointer;
}

.view nav>*:not(score-select):hover {
    background-color: var(--tableDecorColour);
    color: black;
}

:is(.view nav>*.primary):hover {
    color: var(--tableDecorColour);
    background-color: transparent;
}

.view:not(.activeContent) {
    display: none;
}

#start h2 {
    grid-area: view;
    place-self: center;
    text-align: center;
    margin: 0;
    font-size: 5vh;
    font-weight: 700;
}

.view#play .scoringButton {
    grid-area: nav;
}

#cards::part(cut_card), #cards::part(hand) {
    padding: var(--interItemPadding);
}

#cards::part(cut_card), #cards::part(hand), .view nav>* {
    border: var(--uiElementBorder);
}

#cards::part(cut_card),
#cards::part(hand),
.view nav>*,
[role=dialog],
#scoreboard {
    border-radius: 11.5px;
}

.view nav>*.primary,
#cards::part(cut_card) {
    outline: var(--uiElementBorder);
    outline-offset: var(--outlineOffset);
    margin-bottom: var(--outlineOffset);
}

.view nav>*.primary {
    color: black;
    background-color: var(--tableDecorColour);
}

#scoreboard {
    grid-area: view;
    place-self: start end;
    width: 6rem;
    font-weight: 700;
}


@media ((hover: hover) and (width > 65rem)), ((hover: none) and (orientation: landscape) /* maxTitleWidth + sidebars of width buttonWidth and gap */ ) {
    :root {
        --outerPadding: 0.75rem;
        --interItemPadding: 0.75rem;
        --playTopMargin: calc(-0.35 * (var(--maxTitleWidth) / (var(--titleAspectRatio))));
    }

    #play nav {
        display: contents;
    }

    #scoreboard {
        grid-area: sidebar-right;
        place-self: start;
    }

    .view#play .scoringButton {
        grid-area: sidebar-left;
        place-self: start end;
    }

    score-select {
        grid-area: nav;
        justify-self: center;
        max-width: 24rem;
    }
}

@media ((orientation: landscape) and (hover: none)) {
    :root {
        --maxTitleWidth: calc(25vh * var(--titleAspectRatio));
        --outerPadding: 0.5rem;
        --interItemPadding: 0.5rem;
        --sidebarWidth: 1fr;
    }

    #cribtrainer {
        gap: var(--interItemPadding) calc(4*var(--interItemPadding));
        grid-template-rows: auto 1fr;
        grid-template-areas:
            "sidebar-left title sidebar-right"
            "view view nav";
    }

    #start h2 {
        grid-area: view;
        grid-column: 1 / span 2;
        padding-left: 15%;
        padding-right: 33%;
        font-size: 4vw;
    }

    #start nav {
        grid-area: nav;
        grid-column: 2 / span 2;
        padding-left: 33%;
        padding-right: 15%;
        display: grid;
        grid-template-columns: 1fr 1fr;
        justify-items: center;
    }

    #start nav .primary {
        grid-column: 1 / -1;
    }

    #cards::part(cut_card),
    #play cribbage-cards::part(hand) {
        max-height: min(15rem, 100%);
    }

    #cards::part(cut_card) {
        place-self: center end;
    }

    #cards,
    #play.view nav {
        display: contents;
    }

    score-select {
        place-self: center start;
        height: 50%;
        margin-right: 2rem; /* notch */
    }
}

